objects/bDeal__c.object
<CustomObject>
    <fields>
        <fullName>Account_Protective_Provision_Years__c</fullName>
        <inlineHelpText>Number of years included in the account protective provision.</inlineHelpText>
        <label>Account Protective Provision Years</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Account_Protective_Provision__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Protective_Provision__c</fullName>
        <inlineHelpText>Indicates whether the deal will include an account protective provision.</inlineHelpText>
        <label>Account Protective Provision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acquirer_Attributed_BPS_Base_Inc__c</fullName>
        <formula>IF(BLANKVALUE(T2_GDV__c , 0) = 0, 
0, 
(T2_Acquirer_Attributed__c/T2_GDV__c )*10000
)</formula>
        <label>Acquirer Attributed BPS (Base + Inc.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acquirer_Attributed_BPS_Inc__c</fullName>
        <formula>IF(BLANKVALUE(T1_GDV__c , 0) = 0, 
0, 
(T1_Acquirer_Attributed__c/T1_GDV__c )*10000
)</formula>
        <label>Acquirer Attributed BPS (Inc.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acquirer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of acquirer that is part of a Merchant Agreement.</inlineHelpText>
        <label>Acquirer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>bDeals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Add_l_MCard_Commitments__c</fullName>
        <inlineHelpText>Commitments that will drive executive approval of the deal.</inlineHelpText>
        <label>Additional MasterCard Commitments</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MasterCard Standard Pricing Cap</fullName>
                </value>
                <value>
                    <fullName>MasterCard Exclusivity-Services/Product</fullName>
                </value>
                <value>
                    <fullName>Merchant Specific Pricing-MPP &amp; similar</fullName>
                </value>
                <value>
                    <fullName>Interchange Assurance</fullName>
                </value>
                <value>
                    <fullName>Rebates on Non-Core Fees</fullName>
                </value>
                <value>
                    <fullName>Change in the Definition of Core Revenue</fullName>
                </value>
                <value>
                    <fullName>Pricing Guarantee(Most Favored Customer)</fullName>
                </value>
                <value>
                    <fullName>Non-traditional finance structures</fullName>
                </value>
                <value>
                    <fullName>Reduced Direct Acquirer Pricing</fullName>
                </value>
                <value>
                    <fullName>Pre-Payment Support is &gt; 20 MM USD/Euro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Portfolio_Information__c</fullName>
        <inlineHelpText>Indicate whether this deal represents a flip from another brand, renewal or new issuance.</inlineHelpText>
        <label>Additional Portfolio Information</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>OpportunityType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Flip Visa Portfolio</fullName>
                </value>
                <value>
                    <fullName>Flip Amex Portfolio</fullName>
                </value>
                <value>
                    <fullName>Flip  Private Label Portfolio</fullName>
                </value>
                <value>
                    <fullName>Flip Other</fullName>
                </value>
                <value>
                    <fullName>New Issuance to Market</fullName>
                </value>
                <value>
                    <fullName>Renew &amp; Defend with no New issuance</fullName>
                </value>
                <value>
                    <fullName>Renew with New Issuance to Market</fullName>
                </value>
                <value>
                    <fullName>Renew &amp; Flip Visa Portfolio</fullName>
                </value>
                <value>
                    <fullName>Renew &amp; Flip Amex Portfolio</fullName>
                </value>
                <value>
                    <fullName>Renew &amp; Flip  Private Label Portfolio</fullName>
                </value>
                <value>
                    <fullName>Renew &amp; Flip Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Advisors_Notification_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advisors Notification Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advisors_Support_Below_Threshold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to make sure only 1 email &quot;Advisors Support Below Threshold&quot; is sent per Deal.
This checkbox is updated when the first email fires.</description>
        <inlineHelpText>Checkbox to make sure only 1 email &quot;Advisors Support Below Threshold&quot; is sent per Deal. 
This checkbox is updated when the first email fires.</inlineHelpText>
        <label>Advisors Support Below Threshold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age_From_Approval__c</fullName>
        <formula>IF ( ISBLANK( Original_Submission_Date__c ), &quot;Deal To be Submitted&quot;, 
IF (ISBLANK(Date_Deal_Approved__c), Text(Today()-  Original_Submission_Date__c )&amp;&quot; Days and counting&quot;,
 Text(Date_Deal_Approved__c -  Original_Submission_Date__c ) &amp;&quot; Days&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age From Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Routing_s__c</fullName>
        <description>Field displaying the applicable Approval Routing when a record is submitted.</description>
        <formula>IF ( ISPICKVAL(Deal_Type__c, &quot;MasterCard Processing&quot;), 
 IPS_ConditionRouting__c &amp;
IF(ABS(T1_Total_Customer_Support__c) &gt; 0,
&quot;;&quot;&amp; ConditionRouting__c,&quot;&quot;),
ConditionRouting__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Routing(s)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user that has submitted the last approval process</description>
        <inlineHelpText>The user that has submitted the last approval process</inlineHelpText>
        <label>Approval Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deals_future_state</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved_End_Date__c</fullName>
        <description>Deal end date when deal was approved.</description>
        <inlineHelpText>The date contract obligations will end.</inlineHelpText>
        <label>Approved End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_Start_Date__c</fullName>
        <description>Deal Start Date from when Deal was approved</description>
        <inlineHelpText>The date contract obligations will begin.</inlineHelpText>
        <label>Approved Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ariba_Contract_Request_Date__c</fullName>
        <description>for reporting</description>
        <label>Ariba Contract Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ariba_Contract_Request_Status__c</fullName>
        <description>For History purpose</description>
        <label>Ariba Contract Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Updated Contract Information</fullName>
                </value>
                <value>
                    <fullName>Initiated the Ariba Contract Request</fullName>
                </value>
                <value>
                    <fullName>Ariba Contract Request successfully created</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ariba_Contract_Request_Workspace_Id__c</fullName>
        <label>Ariba Contract Request Workspace Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ariba_Contract_Request__c</fullName>
        <label>Ariba Contract Request URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BD_APMEA_M_ConditionRouting__c</fullName>
        <description>AP M ConditionRouting</description>
        <inlineHelpText>AP M ConditionRouting</inlineHelpText>
        <label>AP M ConditionRouting</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_APMEA_O_ConditionRouting__c</fullName>
        <description>AP O ConditionRouting</description>
        <inlineHelpText>AP O ConditionRouting</inlineHelpText>
        <label>AP O ConditionRouting</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_AP_O2_ConditionRouting__c</fullName>
        <label>AP O2 ConditionRouting</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_CAN_M_ConditionRouting__c</fullName>
        <description>CAN M ConditionRouting</description>
        <inlineHelpText>CAN M ConditionRouting</inlineHelpText>
        <label>CAN M ConditionRouting</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_CAN_O1_ConditionRouting__c</fullName>
        <description>CAN O1 ConditionRouting</description>
        <inlineHelpText>CAN O1 ConditionRouting</inlineHelpText>
        <label>CAN O1 ConditionRouting</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_CAN_O2_ConditionRouting__c</fullName>
        <description>CAN O2 ConditionRouting</description>
        <inlineHelpText>CAN O2 ConditionRouting</inlineHelpText>
        <label>CAN O2 ConditionRouting</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_Contract_Duration__c</fullName>
        <formula>(((YEAR( End_Date__c )*12)+ MONTH( End_Date__c )) - ((YEAR( Start_Date__c )*12)+ MONTH( Start_Date__c )))+IF(AND(MONTH( End_Date__c )=MONTH( Start_Date__c ),DAY(End_Date__c)&gt;DAY(Start_Date__c)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BD_Currency__c</fullName>
        <label>Deal Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BD_Discounted_Rate__c</fullName>
        <description>The assumed cost of capital for MasterCard.</description>
        <inlineHelpText>The assumed cost of capital for MasterCard.</inlineHelpText>
        <label>Discounted Rate%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BD_EUR_M_ConditionRouting__c</fullName>
        <description>EUR M ConditionRouting</description>
        <inlineHelpText>EUR M ConditionRouting</inlineHelpText>
        <label>EUR M ConditionRouting</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_EUR_O2_ConditionRouting__c</fullName>
        <label>EUR O2 ConditionRouting</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_EUR_O_ConditionRouting__c</fullName>
        <description>EUR O ConditionRouting</description>
        <inlineHelpText>EUR O ConditionRouting</inlineHelpText>
        <label>EUR O ConditionRouting</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_LAC_M_ConditionRouting__c</fullName>
        <description>LAC M ConditionRouting</description>
        <inlineHelpText>LAC M ConditionRouting</inlineHelpText>
        <label>LAC M ConditionRouting</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_LAC_O2_ConditionRouting__c</fullName>
        <label>LAC O2 ConditionRouting</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_LAC_O_ConditionRouting__c</fullName>
        <description>LAC O ConditionRouting</description>
        <inlineHelpText>LAC O ConditionRouting</inlineHelpText>
        <label>LAC O ConditionRouting</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_LOC_Months__c</fullName>
        <inlineHelpText>Number of additional months in the term of the deal.</inlineHelpText>
        <label>Length of Contract (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BD_LOC_Years__c</fullName>
        <inlineHelpText>Number of years in the term of the deal.</inlineHelpText>
        <label>Length of Contract (Years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BD_MEA_M_ConditionRouting__c</fullName>
        <description>MEA M ConditionRouting</description>
        <inlineHelpText>MEA M ConditionRouting</inlineHelpText>
        <label>MEA M ConditionRouting</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_MEA_O2_ConditionRouting__c</fullName>
        <label>MEA O2 ConditionRouting</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_MEA_O_ConditionRouting__c</fullName>
        <description>MEA O ConditionRouting</description>
        <inlineHelpText>MEA O ConditionRouting</inlineHelpText>
        <label>MEA O ConditionRouting</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_Number_of_Program_Years_or_Term__c</fullName>
        <description>Number of years from start date to end date plus any residual years included in the deal.</description>
        <formula>IF( AND(BD_LOC_Years__c =0, OR(BD_LOC_Months__c=0,BD_LOC_Months__c&gt;0)),
    IF( ISPICKVAL(Account_Protective_Provision__c,&apos;Yes&apos;) ,
        BD_LOC_Years__c+1+VALUE(TEXT( Account_Protective_Provision_Years__c )),
        BD_LOC_Years__c+1
    ),
    IF(AND(BD_LOC_Years__c&gt;0, BD_LOC_Months__c=0),
        IF( ISPICKVAL(Account_Protective_Provision__c,&apos;Yes&apos;) ,
            BD_LOC_Years__c+VALUE(TEXT( Account_Protective_Provision_Years__c )),
            BD_LOC_Years__c
        ),
        IF(AND(BD_LOC_Years__c&gt;0, BD_LOC_Months__c&gt;0),
            IF( ISPICKVAL(Account_Protective_Provision__c,&apos;Yes&apos;) ,
                BD_LOC_Years__c+1+VALUE(TEXT( Account_Protective_Provision_Years__c )),
                BD_LOC_Years__c+1
            ),
            0
        )
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of years from start date to end date plus any residual years included in the deal.</inlineHelpText>
        <label>Number of Program Years (or Term)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BD_Payback__c</fullName>
        <formula>(T1_Payback_Years__c*12 ) / ( (BD_Period_in_months__c)+ IF( ISPICKVAL(Account_Protective_Provision__c, &apos;Yes&apos;) , VALUE( TEXT( Account_Protective_Provision_Years__c ))*12, 0) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payback %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BD_Period_in_months__c</fullName>
        <formula>IF ( ISPICKVAL(Deal_Type__c,&quot;MasterCard Processing&quot;),
12-1+MONTH(End_Date__c)+12*(YEAR(End_Date__c)-YEAR( IPS_Start_Date__c )-1),
12-MONTH(Start_Date__c)+MONTH(End_Date__c)+12*(YEAR(End_Date__c)-YEAR(Start_Date__c)-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period in months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BD_ShowCustSupPopup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show customer support popup in override mode.</description>
        <inlineHelpText>Show customer support popup in override mode.</inlineHelpText>
        <label>Show Customer Support Popup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BD_US_M_ConditionRouting__c</fullName>
        <description>US M ConditionRouting</description>
        <inlineHelpText>US M ConditionRouting</inlineHelpText>
        <label>US M ConditionRouting</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_US_O1_ConditionRouting__c</fullName>
        <description>US O1 ConditionRouting</description>
        <inlineHelpText>US O1 ConditionRouting</inlineHelpText>
        <label>US O1 ConditionRouting</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_US_O2_ConditionRouting__c</fullName>
        <description>US O2 ConditionRouting</description>
        <inlineHelpText>US O2 ConditionRouting</inlineHelpText>
        <label>US O2 ConditionRouting</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bsmart_Obj_Id__c</fullName>
        <description>External ID needed to attach attachments to the deal.</description>
        <externalId>true</externalId>
        <label>Bsmart_Obj_Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Business_Case_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Case Approved ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Case_Financial_Model_File_Id__c</fullName>
        <label>Business Case Financial Model File Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Case_Financial_Model_Link__c</fullName>
        <description>Stores the Business Case Financial Model file name and link</description>
        <inlineHelpText>Stores the Business Case Financial Model file name and link</inlineHelpText>
        <label>Business Case Financial Model Link</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Business_Case_Financial_Model__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Attach business case financial model.</inlineHelpText>
        <label>Business Case Financial Model</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Case_Other_Supporting_Docs_Link__c</fullName>
        <description>Stores the Business Case Other Supporting Docs file name &amp; Link</description>
        <inlineHelpText>Stores the Business Case Other Supporting Docs file name &amp; Link</inlineHelpText>
        <label>Business Case Other Supporting Docs Link</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Business_Case_Other_Supporting_Docs__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Attach business case supporting documents.</inlineHelpText>
        <label>Business Case Other Supporting Docs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Case_Supporting_Documents_Ids__c</fullName>
        <label>Business Case Supporting Documents Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Case_Supporting_Documents_Link__c</fullName>
        <description>Stores the Business Case Supporting Documents file names and Link</description>
        <inlineHelpText>Stores the Business Case Supporting Documents file names and Link</inlineHelpText>
        <label>Business Case Supporting Documents Link</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Business_Case_Supporting_Documents__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check when Business Case Supporting Documents are loaded</inlineHelpText>
        <label>Business Case Supporting Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>Information from Deal&apos;s opportunity products. Used for reporting.</description>
        <inlineHelpText>Information from Deal&apos;s opportunity products. Used for reporting.</inlineHelpText>
        <label>Product/Service Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cobrand_Flag_PL__c</fullName>
        <inlineHelpText>Is this a Co-Brand Deal?</inlineHelpText>
        <label>co-Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cobrand_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if this deals falls into the Co-Brand Category</inlineHelpText>
        <label>Cobrand Flag DELETE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commercial_Credit__c</fullName>
        <description>Commercial Credit</description>
        <inlineHelpText>Commercial Credit</inlineHelpText>
        <label>Commercial Credit</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>LoB_Commercial__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>CoBrand</fullName>
                </value>
                <value>
                    <fullName>Fleet</fullName>
                </value>
                <value>
                    <fullName>Unembossed</fullName>
                </value>
                <value>
                    <fullName>Government/Public Sector</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Purchasing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commercial_Debit__c</fullName>
        <description>Commercial Debit</description>
        <inlineHelpText>Commercial Debit</inlineHelpText>
        <label>Commercial Debit</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>LoB_Debit__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>CoBrand</fullName>
                </value>
                <value>
                    <fullName>Fleet</fullName>
                </value>
                <value>
                    <fullName>Unembossed</fullName>
                </value>
                <value>
                    <fullName>Standard (Debit)</fullName>
                </value>
                <value>
                    <fullName>Gold (Debit)</fullName>
                </value>
                <value>
                    <fullName>Platinum (Debit)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConditionRouting_Region__c</fullName>
        <label>ConditionRouting Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConditionRouting__c</fullName>
        <label>ConditionRouting</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Credit__c</fullName>
        <description>Consumer Credit</description>
        <inlineHelpText>Consumer Credit</inlineHelpText>
        <label>Consumer Credit</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>LoB_Consumer__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>CoBrand</fullName>
                </value>
                <value>
                    <fullName>Unembossed</fullName>
                </value>
                <value>
                    <fullName>World Elite</fullName>
                </value>
                <value>
                    <fullName>World</fullName>
                </value>
                <value>
                    <fullName>Standard (Consumer)</fullName>
                </value>
                <value>
                    <fullName>Gold (Consumer)</fullName>
                </value>
                <value>
                    <fullName>Platinum (Consumer)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consumer_Debit__c</fullName>
        <description>Consumer Debit</description>
        <inlineHelpText>Consumer Debit</inlineHelpText>
        <label>Consumer Debit</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>LoB_Debit__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>CoBrand</fullName>
                </value>
                <value>
                    <fullName>Prepaid</fullName>
                </value>
                <value>
                    <fullName>Unembossed</fullName>
                </value>
                <value>
                    <fullName>Standard (Debit)</fullName>
                </value>
                <value>
                    <fullName>Gold (Debit)</fullName>
                </value>
                <value>
                    <fullName>Platinum (Debit)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Effective_Date__c</fullName>
        <label>Contract Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Critical_Model_Assumption__c</fullName>
        <inlineHelpText>Assumptions behind the financial model including growth assumptions, average transactions size, international vs. domestic business mix, processed vs. non-processed transactions and revenue assumptions.</inlineHelpText>
        <label>Critical Model Assumption</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Customer_Commitments__c</fullName>
        <inlineHelpText>Customer obligations including volume, share commitments, clawbacks, non-conversion, continued observance and other requirements.</inlineHelpText>
        <label>Customer Commitments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Customer_Division_Text__c</fullName>
        <description>For workflow use only. Not intended to be on page layout.</description>
        <label>Customer Division Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>Customer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Region_Text__c</fullName>
        <description>Value from the Customer Region field is copied into this field (via workflow). This field is then used in Deal Sharing Rule criteria.</description>
        <label>Customer Region Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Support_Amount__c</fullName>
        <description>This custom formula field converts Customer Support values from negative (-) to absolute values (+). Used for reporting.</description>
        <formula>ABS(  T1_Total_Customer_Support_Deal_Total_USD__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This custom formula field converts Customer Support values from negative (-) to absolute values (+). Used for reporting.</inlineHelpText>
        <label>Customer Support $ Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Support_BPS_Base_Inc__c</fullName>
        <formula>IF(BLANKVALUE(T2_GDV__c , 0) = 0, 
0, 
(T2_Total_Customer_Support__c/T2_GDV__c )*10000
)</formula>
        <label>Customer Support BPS (Base + Inc.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Support_BPS_Inc__c</fullName>
        <formula>IF(BLANKVALUE(T1_GDV__c , 0) = 0, 
0, 
(T1_Total_Customer_Support__c/T1_GDV__c )*10000
)</formula>
        <label>Customer Support BPS (Inc.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Support_Prepayment_Amount__c</fullName>
        <inlineHelpText>Dollar/Euro amount of support prepayment required.</inlineHelpText>
        <label>Support Prepayment  Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Support_Prepayment_Description__c</fullName>
        <inlineHelpText>Detail around the required support prepayment.</inlineHelpText>
        <label>Support Prepayment Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Customer_Support_Prepayment__c</fullName>
        <inlineHelpText>Indicates whether this deal requires support prepayment.</inlineHelpText>
        <label>Support Prepayment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will hold the Oppt.Account link</description>
        <inlineHelpText>Name of issuer, acquirer or merchant that the deal is with.</inlineHelpText>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>bDeals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cycle_Time_Days__c</fullName>
        <description>Number of days between Date  Deals  Approved and Original Submission Date</description>
        <formula>Date_Deal_Approved__c - Original_Submission_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Cycle Time (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Source_Other__c</fullName>
        <inlineHelpText>Enter value if Data Source &quot;Other&quot; is selected</inlineHelpText>
        <label>If Other, Explain (Data Source)</label>
        <type>TextArea</type>
    </fields>
</CustomObject>